# KPIChatbotEngine

./: .gitignore  main.py  package-lock.json  package.json  pyproject.toml  replit.md  run_python_server.py  start-python.js  start_python_backend.sh  temp_frontend_server.ts
attached_assets/: Pasted-Build-a-Multi-Sector-AI-Powered-KPI-Chatbot-application-with-Backend-Python-FastAPI-Fronte-1755072762887_1755072762891.txt
backend/: README.md  __init__.py  auth.py  database.py  gemini.py  main.py  models.py  requirements.txt  run.py  start_backend.sh
backend/services/: database_config.py  gemini.py  query_executor.py
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: ChatbotInterface.tsx  Dashboard.tsx  DatabaseConfig.tsx  DatabaseModal.tsx  DatabaseReconnectModal.tsx  Login.tsx  ResultsDisplay.tsx
client/src/hooks/: useAuth.ts
client/src/lib/: api.ts
client/src/types/: index.ts
server/: index.ts  python_server.py  routes.ts
server/config/: database.json
server/services/: chart_process_diagram.md  database-config.ts  gemini.ts  query-executor.ts
services/: database_config.py  gemini_service.py  index.py  query_executor.py
shared/: schema.ts
