[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3.74",
    "langchain-google-genai>=2.1.9",
    "langgraph>=0.6.5",
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.0",
    "PyJWT>=2.9.0",
    "pydantic>=2.7.0",
    "psycopg[binary]>=3.2.1",
    "google-generativeai>=0.7.2",
    "python-dateutil>=2.9.0.post0"
]
